syntax = "proto3";

package service_service;

service CountryService {
    rpc AddCountry(Country) returns (Country);
    rpc EditCountry(Country) returns (Country);
    rpc DeleteCountry(GetSingleRequest) returns (Message);
    rpc ListCountries(ListRequest) returns (ListResponse);
    rpc GetCountry(GetSingleRequest) returns (Country);
}

message Country {
    int64 id = 1;
    string name = 2;
    string flag = 3;
    string created_at = 4;
    string updated_at = 5;
}

message GetSingleRequest {
    int64 id = 1;
}

message ListRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListResponse {
    int64 count = 1;
    repeated Country countries = 2;
}

message Message {
    string message = 1;
}
